# explainable-prescriptive-process-monitoring-tdqn

./: .pre-commit-config.yaml  CLAUDE.md  DISTILLATION_PAPER_SECTION.md  PAPER_FIDELITY_SECTION.md  PROJECT_MAP.md  README.md  REFACTORING_MULTI_DATASET.md  RESPUESTAS_PREGUNTAS_HISTORIA.md  ci-local.sh  dvc.yaml  figure-arquitecture-actual.tex  params.yaml  pyproject.toml  quickcheck.sh
.github/workflows/: ci.yml
configs/: config.yaml
configs/datasets/: simbank.yaml  template.yaml
configs/schemas/: offline_rlset.schema.json
scripts/: 01_preprocess_log.py  01b_validate_and_split.py  02_encode_prefixes.py  03_build_mdp_dataset.py  04_train_tdqn_offline.py  05_run_ope_dr.py  06_explain_policy.py  07_fidelity_tests.py  08_distill_policy.py  10_build_deploy_bundle.py  19_generate_results_figures.py  generate_fidelity_plots.py  run_pipeline.sh
src/: cli.py
src/xppm/data/: build_mdp.py  encode_prefixes.py  validate_split.py
src/xppm/distill/: __init__.py  distill_policy.py  export_rules.py
src/xppm/ope/: report.py
src/xppm/rl/: replay.py  train_tdqn.py
src/xppm/rl/models/: transformer.py
src/xppm/serving/: server.py
src/xppm/utils/: config.py  io.py  logging.py  seed.py
src/xppm/xai/: attributions.py  explain_policy.py  fidelity_tests.py
tests/: conftest.py
tests/data/: tiny_log.csv  tiny_log_with_outcome.csv
tests/unit/: test_build_mdp.py  test_build_mdp_real.py  test_encode_prefixes.py  test_encode_prefixes_deterministic.py  test_ope_dr.py  test_preprocess_parser.py  test_train_smoke.py  test_validate_split.py
