[project]
name = "xppm-tdqn"
version = "0.1.0"
description = "Explainable prescriptive process monitoring with TDQN and offline RL"
authors = [{ name = "Andrew", email = "andrew@example.com" }]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "pyarrow",  # Required for parquet support
    "pyyaml",
    "scikit-learn",
    "torch",
    "tqdm",
    "pydantic",
    "fastapi",
    "uvicorn",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "mypy",
    "ruff",
    "black",
    "types-PyYAML",
]
tracking = [
    "mlflow",
    "wandb",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
# Exclude slow tests by default (run with -m slow to include them)
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
addopts = "-m \"not slow\""
